WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294661
memory leaks in com.apple.WebKit.GPU
https://bugs.webkit.org/show_bug.cgi?id=294661
Summary
memory leaks in com.apple.WebKit.GPU
Jean-Yves Avenard [:jya]
Reported
2025-06-18 01:05:56 PDT
leaked stack is this one: 6 com.apple.WebCore 0x1b3bc9e5c WTF::BlockPtr<void (int, unsigned int, __CVBuffer*, CMTime, CMTime)> WTF::BlockPtr<void (int, unsigned int, __CVBuffer*, CMTime, CMTime)>::fromCallable<WebCore::WebCoreDecompressionSession::decodeSampleInternal(opaqueCMSampleBuffer*, bool)::$_2>(WebCore::WebCoreDecompressionSession::decodeSampleInternal(opaqueCMSampleBuffer*, bool)::$_2)::'lambda'(void*, int, unsigned int, CVBuffer*, CMTime, CMTime)::invoke(void*, int, unsigned int, __CVBuffer*, CMTime, CMTime) + 248 5 com.apple.CoreMedia 0x1991cbcac CMVideoFormatDescriptionCreateForImageBuffer + 848 4 com.apple.CoreMedia 0x1991a7e10 CMVideoFormatDescriptionCreate + 128 3 com.apple.CoreMedia 0x1991a8520 FigDerivedFormatDescriptionCreate + 740 2 com.apple.CoreFoundation 0x18cd429b0 _CFRuntimeCreateInstance + 880 1 libsystem_malloc.dylib 0x18cb136dc _malloc_zone_malloc + 64 0 libsystem_malloc.dylib 0x18cb2bc48 _malloc_zone_malloc_instrumented_or_legacy + 152 Which I think is this code:
https://searchfox.org/wubkat/rev/9235b1a61373f4234edd48dd00c30a0fda85faba/Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm#229-230
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2025-06-18 01:06:01 PDT
rdar://153503700
Jean-Yves Avenard [:jya]
Comment 2
2025-06-18 01:13:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46891
EWS
Comment 3
2025-06-18 07:16:27 PDT
Committed
296374@main
(f04695c4dfda): <
https://commits.webkit.org/296374@main
> Reviewed commits have been landed. Closing PR #46891 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug