memory leaks in com.apple.WebKit.GPU https://bugs.webkit.org/show_bug.cgi?id=294661 rdar://153503700

Reviewed by Youenn Fablet.

If the code returned early (non visionOS), then the CMVideoFormatDescriptionRef
create would leak. We now adopt the object immediately and use move
semantics to make it clearer and avoid fuure issues.

* Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:
(WebCore::copyDescriptionExtensionValuesIfNeeded):
(WebCore::handleDecompressionOutput):

Canonical link: https://commits.webkit.org/296374@main